@@ -34,7 +34,7 @@
 #include "config.h"
 
 // New Implementation
-#if dTRIMESH_OPCODE_USE_NEW_TRIMESH_TRIMESH_COLLIDER
+#if !dTRIMESH_OPCODE_USE_OLD_TRIMESH_TRIMESH_COLLIDER
 
 #if dTRIMESH_ENABLED
 
@@ -1305,5 +1305,5 @@ bool TriTriContacts(const dVector3 tr1[3],
 }
 
 #endif // dTRIMESH_OPCODE
-#endif // dTRIMESH_USE_NEW_TRIMESH_TRIMESH_COLLIDER
+#endif // !dTRIMESH_USE_OLD_TRIMESH_TRIMESH_COLLIDER
 #endif // dTRIMESH_ENABLED
